--- a/src/app/components/navmenu/navmenu.component.html
+++ b/src/app/components/navmenu/navmenu.component.html
@@ -1,8 +1,23 @@
-<nav>
-    <div class="title">Sistema de Inventario</div>
-    <div>
-        <a routerLink="/home" routerLinkActive="active-link" class="nav-link">Home</a>
-        <a routerLink="/products" routerLinkActive="active-link" class="nav-link">Productos</a>
-        <a routerLink="/categories" routerLinkActive="active-link" class="nav-link">Categorias</a>
+<nav class="container">
+  <h2 class="t">Sistema de inventario</h2>
+  <nav class="navbar navbar-expand-lg " >
+    <div class="container">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" routerLink="/home" routerLinkActive="active-link">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/products" routerLinkActive="active-link">Productos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/categories" routerLinkActive="active-link">Categorias</a>
+          </li>
+        </ul>
+      </div>
     </div>
+  </nav>
 </nav>
