--- a/src/app/components/product/product.component.css
+++ b/src/app/components/product/product.component.css
@@ -1,216 +1,134 @@
 
-  body {
-    background-color: #181818; /* Fondo principal en modo oscuro */
-    color: #f9f9f9; /* Color del texto principal en modo oscuro */
-  }
-  .presentacion{
-    margin-left: 6%;
-    font-size: 23px;
-  }
-  
-  table {
-    margin: 0 auto;
-    width: 90%;
-    border-collapse: collapse;
-    margin-top: 20px;
-    border-radius: 10px; 
-    overflow: hidden;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.568);
-  }
-  
-  th, td {
-    border: 1px solid #333333; /* Bordes de las celdas en modo oscuro */
-    text-align: left;
-    padding: 8px;
-    color: #f9f9f9; /* Color del texto en modo oscuro */
-    padding: 12px;
-  }
-  
-  th {
-    background-color: #282828; /* Encabezados de tabla en modo oscuro */
-    font-size: 20px;
-    text-align: center;
-  }
-  
-  tr:nth-child(even) {
-    background-color: #212121; /* Fondo de filas pares en modo oscuro */
-  }
-  
-  tr:nth-child(odd) {
-    background-color: #242424; /* Fondo de filas impares en modo oscuro */
-  }
-  
-  tr:hover {
-    background-color: #333333; /* Color de fondo al pasar el cursor sobre una fila en modo oscuro */
-  }
-  
-  tfoot {
-    display: table-row-group; /* Asegura que el tfoot se comporte como una fila de la tabla */
-  }
-  
-  tfoot td {
-    padding: 12px; /* Ajusta el relleno de las celdas del tfoot según sea necesario */
-    border: 1px solid #333333; /* Agrega bordes a las celdas del tfoot */
-  }
-  tfoot input{
-    width: 100%; /* Ajusta el ancho de los campos de entrada al 100% del ancho de la celda */
-    padding: 8px; /* Ajusta el relleno de los campos de entrada según sea necesario */
-    box-sizing: border-box; /* Asegura que el ancho especificado incluya el relleno y el borde */
-    margin-bottom: 10px;
-  }
-  
-  tfoot button {
-    background-color: #606060;
-    color: #f9f9f9;
-    font-size: 20px;
-    border-radius: 7px;
-    padding: 25px 35px; /* Ajusta el relleno del botón según sea necesario */
-    margin-top: 23px; /* Añade margen superior para separar el botón del tfoot */
-    display: block; /* Asegura que el botón sea un bloque para aplicar márgenes automáticos */
-    margin-left: auto; /* Centra el botón horizontalmente */
-    margin-right: auto;
-    
-  }
-  
-  tfoot button:hover {
-    background-color: #909090;
+body {
+    background-color: #181818; 
+    color: #f9f9f9; 
 }
-  /*Filtros*/
-  .button-container {
+.form-select, input{
+    margin-right: 20px;
+    width: 100%;
+    background-color: #181818;
+    color: #f9f9f9;
+}
+
+
+.table-dark{
+  --bs-table-color: #fff;
+  --bs-table-bg: #212121;
+  --bs-table-border-color: #ffffff0e;
+  --bs-table-striped-bg: #242424;
+}
+
+.input-container{
+    display: flex;
+    justify-content: end;
+}
+.container{
     display: flex;
     justify-content: space-between;
-    width: 90%;
-    align-items: center;
-    margin: 0 auto;
-  }
-  .bb{
-    display: flex;
-    justify-content: space-evenly;
-  }
-  .b1{
-    margin-right: 10px;
-  }
-  .b2{
-    margin-left: 10px;
-  }
-  
-  .va {
-    display: flex;
-    gap: 20px; 
+    margin-bottom: 20px;
+    margin-top: 20px;
+    font-size: 17px;
 
-  }
-  .bv{
-    display: inline-block; /* Hace que el botón sea un elemento en línea para ajustar el ancho */
-    width: 200px; /* Ajusta el ancho del botón según sea necesario */
-    height: 40px;
-  }
-  .custom {
-    display: inline-block; /* Para que el formulario solo tome el ancho del select */
-    background: none; /* Elimina el fondo del formulario */
-    padding: 0; /* Ajusta el relleno según sea necesario */
-    margin: 0; /* Ajusta los márgenes según sea necesario */
-  }
-  
-  .custom-select {
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
-    width: 100%;
-    margin: 0 auto;
-     
-  }
-  /*Estilo para el formulario de carga*/
-  
-  
-  form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 50%;
-    margin: 0 auto;
-    margin-top: 30px;
-    margin-bottom: 50px;
-    padding: 20px;
-    border: 1px solid #333333;
-    border-radius: 10px;
-    background-color: #242424; /* Fondo de la caja del formulario en modo oscuro */
-    
-  }
-  
-  label {
-    display: block;
-    margin-bottom: 10px;
-    color: #f9f9f9; /* Color del texto en modo oscuro */
-    font-size: 20px;
-    
-  }
-  
-  
-  select{
-    width: 100%;
-    padding: 8px;
-    border-radius: 5px;
-    border: 1px solid #333333;
-    background-color: #212121; 
-    color: #f9f9f9; 
-  }/*
-  
-  }*/
-  input[type="number"] {
-    width: 98%;
-    
-    padding-top: 20px;
-    margin: 0 auto;
-    border: 0 auto;
-    border-radius: 5px;
-    border: 1px solid #333333;
-    background-color: #212121; 
-    color: #f9f9f9; 
-  }
-  
-  input[type="text"] {
-    width: 97%;
-    padding-top: 20px;
-    
-    margin: 0 auto;
-    border: 0 auto;
-    border-radius: 5px;
-    border: 1px solid #333333;
-    background-color: #212121; 
-    color: #f9f9f9; 
-  }
-  
-  button {
-    padding: 10px 20px;
-    background-color: #606060;
-    color: #f9f9f9;
-    border: none;
-    border-radius: 7px;
-    cursor: pointer;
-  }
-  
-  button:hover {
-    background-color: #333333;
-  }
-  
-  button:active {
-    background-color: #272727;
-  }
+}
+.container-sm {
+  max-width: 100%;
+}
+thead{
+  font-size: 20px;
+  text-align: center;
+}
 
-  /*Formulario de update*/
-  .actualizar{
-    font-size: 25px;
-    text-align: center;
-  }
-  .smal{
-    font-size: 12px;
-    color: rgb(240, 38, 38);
-    margin-bottom: 15px;
-    text-align: left;
-    font-style: italic;
-    width: 98%;
-  }
+.container-form{
+  padding: 20px;
+  margin-left: 250px;
+  width: 60%;
+  background-color: #202020;
+  border-radius: 7px;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  font-size: 20px;
+  
+}
+.container-form .h5{
+  text-align: center;
+  font-size: 25px;
+  margin-bottom: 19px;
+}
+label{
+  margin-left: 20px;
+  margin-right: 14px;
+}
+input{
+  width: 100%;
+}
+.mt-4{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  
+}
+.c{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
 
-  
-  
-  
+}
+
+/* filtros*/
+.button-container {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  align-items: center;
+  margin: 0 auto;
+  margin-top: 50px;
+  margin-right: 140px;
+}
+.bb{
+  display: flex;
+  justify-content: space-evenly;
+}
+.b1{
+  margin-right: 10px;
+}
+.b2{
+  margin-left: 10px;
+}
+
+.va {
+  display: flex;
+  gap: 20px; 
+
+}
+
+.custom {
+  display: flex;
+}
+
+.custom-select {
+  border: 1px solid #ccc;
+  background-color: #181818;
+  color: #f9f9f9;
+  border-radius: 4px;
+  font-size: 16px;
+  width: 110px;
+  margin: 0 auto;
+   
+}
+
+.b1,.bv,.b2{
+  padding: 10px 20px;
+  background-color: #606060;
+  color: #f9f9f9;
+  border: none;
+  border-radius: 7px;
+  cursor: pointer;
+}
+
+
+.b1,.bv,.b2:hover {
+  background-color: #333333;
+}
+
+
